Added sverben embed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="babylon/pep.js"></script>
     <link rel="shortcut icon" type="image/png" href="icon.png"/>
     <link rel="stylesheet" href="style.css">
+
+    <meta content='Snake 3d beta' name='sverben:title'>
+    <meta content='A sverben beta' name='sverben:description'>
+    <meta content='Play' name='sverben:btn'>
 </head>
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
