Added Score visibility and highscores

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
 
+    <div class="score">
+        <p class="normalscore" id="normalscore">Score: 3</p>
+        <p class="highscore" id="highscore">Highscore: 10</p>
+    </div>
+
     <div class="menu" id="menu">
         <h2>Game paused</h2>
         <button class="button" id="back">Back to game</button>
